# Data-Analysis-with-Polars-and-Python

./: .gitignore  README.md  pyproject.toml
complete/: 01 - Installation and Setup.ipynb  02 - Python Crash Course.ipynb  03 - Series.ipynb  04 - DataFrames I.ipynb  05 - DataFrames II.ipynb  06 - DataFrames III - Filtering.ipynb  07 - Joins.ipynb  08 - Concatenation.ipynb  09 - Reshaping.ipynb  10 - Arrays and Lists.ipynb  11 - Structs.ipynb  12 - Working with Text Data.ipynb  13 - Categoricals and Enums.ipynb  14 - Working with Datetimes.ipynb  15 - Selectors.ipynb  16 - GroupBy.ipynb  17 - LazyFrames.ipynb  colors.csv  daily_steps.csv  ecommerce_orders.json  education_costs.csv  history.csv  student_grades.csv  sugars.csv  todos.csv  weird_datetimes.csv
complete/college/: enrollments.csv  students.csv
complete/exchange_rates/: rates.csv
complete/museum/: new_paintings.csv
complete/store/: prices.csv  (+1 more)
incomplete/: 01 - Installation and Setup.ipynb  02 - Python Crash Course.ipynb  03 - Series.ipynb  04 - DataFrames I.ipynb  05 - DataFrames II.ipynb  06 - DataFrames III - Filtering.ipynb  07 - Joins.ipynb  08 - Concatenation.ipynb  09 - Reshaping.ipynb  10 - Arrays and Lists.ipynb  11 - Structs.ipynb  12 - Working with Text Data.ipynb  13 - Categoricals and Enums.ipynb  14 - Working with Datetimes.ipynb  15 - Selectors.ipynb  16 - GroupBy.ipynb  17 - LazyFrames.ipynb  clock_in_times.csv  coffee_sales.csv  employees.csv  flights.json  gym_memberships.csv  ice_creams.csv  retail_sales.csv  spotify_top_1000_tracks.csv  student_grades_expanded.csv  wide_store_sales.csv
(+12 files in other folders)
